--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".fragments.tasks.TasksFragment">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_add_foreground"
+        />
+
     <Button
         android:id="@+id/createTaskButton"
         android:layout_width="match_parent"
