--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -86,5 +86,15 @@
         <item name="android:layout_centerHorizontal">true</item>
     </style>
 
+    <style name="blockSettings">
+        <item name="android:background">@drawable/edittext_background</item>
+    </style>
+
+    <style name="changeThemeButton">
+        <item name="android:fontFamily">@font/qanelas</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/border_button</item>
+    </style>
+
 </resources>
 
