--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -66,8 +66,7 @@
         android:layout_width="188dp"
         android:layout_height="52dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/btn_next"
-        android:foreground="@drawable/pressedbtnnext"
+        style="@style/imageButton"
         app:layout_constraintEnd_toEndOf="@+id/blockView"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="@+id/blockView"
