--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -93,8 +93,7 @@
         android:layout_width="188dp"
         android:layout_height="52dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/btn_next"
-        android:foreground="@drawable/pressedbtnnext"
+        style="@style/imageButton"
         app:layout_constraintEnd_toEndOf="@+id/blockView"
         app:layout_constraintStart_toStartOf="@+id/blockView"
         app:layout_constraintTop_toBottomOf="@+id/checkBox" />
