--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -8,8 +8,10 @@
     android:layout_marginTop="20dp"
     android:layout_marginEnd="20dp"
     android:layout_marginBottom="20dp"
+    android:alpha="0.85"
     android:elevation="10dp"
-    app:cardCornerRadius="10dp"
+    app:cardCornerRadius="20dp"
+    android:padding="10dp"
     tools:background="@color/black">
 
 
@@ -22,6 +24,7 @@
         android:layout_marginBottom="10dp"
         android:orientation="vertical">
 
+
         <TextView
             android:id="@+id/titleTextView"
             style="@style/MainText"
@@ -29,17 +32,19 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="35sp"
-            tools:text="Название заметки" />
+            tools:text="Название задачи" />
 
         <TextView
             android:id="@+id/contentTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="20sp"
             tools:text="Плыли мы по морю ветер мачту рвал.
 Капитан Залупа с корабля сбежал.
 Я стоял на вахте и держал весло.
 Чем-то уебало и меня снесло." />
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
