--- a/app/src/main/res/layout/fragment_select_user_task.xml
+++ b/app/src/main/res/layout/fragment_select_user_task.xml
@@ -21,6 +21,7 @@
     <TextView
         android:id="@+id/textView4"
         style="@style/MainText"
+        android:layout_marginTop="24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tasks"
@@ -35,8 +36,7 @@
         android:layout_width="188dp"
         android:layout_height="52dp"
         android:layout_marginTop="36dp"
-        android:background="@drawable/btn_next"
-        android:foreground="@drawable/pressedbtnnext"
+        style="@style/imageButton"
         app:layout_constraintEnd_toEndOf="@+id/blockView"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="@+id/blockView"
@@ -60,7 +60,7 @@
         android:layout_width="270dp"
         android:layout_height="60dp"
         android:layout_marginTop="60dp"
-        android:background="@drawable/edittext_background"
+        style="@style/blockSettings"
         android:fontFamily="@font/qanelas"
         android:text="@string/select_user"
         android:textColor="@color/white"
