--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,8 +38,8 @@
         <item name="android:gravity">center</item>
         <item name="android:background">@color/blue_ed_text</item>
         <item name="android:layout_height">60dp</item>
-        <item name="itemIconTint">@color/white</item>
-        <item name="itemTextColor">@color/white</item>
+        <item name="itemIconTint">@drawable/selector</item>
+        <item name="itemTextColor">@drawable/selector</item>
         <item name="android:layout_width">match_parent</item>
     </style>
 
