--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -38,8 +38,8 @@
         <item name="android:gravity">center</item>
         <item name="android:background">@color/green_reg</item>
         <item name="android:layout_height">60dp</item>
-        <item name="itemIconTint">@color/white</item>
-        <item name="itemTextColor">@color/white</item>
+        <item name="itemIconTint">@drawable/selector_night</item>
+        <item name="itemTextColor">@drawable/selector_night</item>
         <item name="android:layout_width">match_parent</item>
     </style>
 
