--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -6,20 +6,20 @@
     android:layout_height="wrap_content"
     android:elevation="10dp"
     app:cardCornerRadius="20dp"
-    android:alpha="0.85"
+    android:alpha="0.70"
+    android:backgroundTint="@color/white"
     android:layout_marginTop="20dp"
     android:layout_marginEnd="20dp"
     android:layout_marginStart="20dp"
-    android:layout_marginBottom="20dp"
-    tools:background="@color/black">
+    android:layout_marginBottom="20dp">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginTop="10dp"
             android:orientation="vertical">
 
@@ -51,14 +51,16 @@
                 android:id="@+id/fromTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="15sp"
+                android:textColor="#6E7F80"
                 tools:text="От кого:" />
 
             <TextView
                 android:id="@+id/whomTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="15sp"
+                android:textColor="#6E7F80"
                 tools:text="Кому:" />
 
             <TextView
@@ -66,14 +68,16 @@
                 android:id="@+id/startDateTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="15sp"
+                android:textColor="#6E7F80"
                 android:text="Дата начала: "/>
 
             <TextView
                 android:id="@+id/endDateTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="15sp"
+                android:textColor="#6E7F80"
                 android:text="Дата окончания: "/>
         </LinearLayout>
 </androidx.cardview.widget.CardView>
