--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,6 +19,10 @@
 
     </style>
 
+    <style name="card">
+        <item name="android:background">@color/white</item>
+    </style>
+
     <style name="fontStyle">
         <item name="android:fontFamily">@font/qanelas</item>
     </style>
